# talk_spark_backend

./: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
app/: main.py  talk_spark.py
app/agents/: linkedin_lookup_agent.py
app/routers/: talk_spark.py
app/third_parties/: linkedin.py
app/tools/: tools.py
app/utils/: type_classes.py
learning_langchain/: main.py  output_parsers.py  social_summarizer.py  talk_spark.py  temp.js
learning_langchain/agents/: linkedin_lookup_agent.py
learning_langchain/routers/: summarizer.py  talk_spark.py
learning_langchain/third_parties/: linkedin.py  temp.ipynb
learning_langchain/third_parties/temp/: response.json  response_andrew_ng.json  single_linkedin_request.py
learning_langchain/tools/: tools.py  tools_alternative_old.py
